syntax = "proto3";

package serval.assessment.v1;

import "google/protobuf/empty.proto";


message AssessmentEngineCompletedStatistics {
    float confidence = 1;
    int32 corpus_size = 2;
}

message AssessmentResultContent {
    string text_id = 1;
    string ref = 2;
    float score = 3;
    string description = 4;
}